--- a/hurricane_analysis.ipynb
+++ b/hurricane_analysis.ipynb
@@ -350,28 +350,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Katrina: 125000000000\nKatrina: 125000000000\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# write your greatest damage function here:\n",
     "\n",
-    "\n"
+    "# 1st I create a new dictionary pairing name and damage record of each hurricane, if damages where not recorded they get assigned a value of 0\n",
+    "hurricanes_damage = {}\n",
+    "\n",
+    "for hurricane in hurricanes.keys():\n",
+    "    dmg = hurricanes[hurricane][\"Damage\"]\n",
+    "    if type(dmg) == str:\n",
+    "        hurricanes_damage[hurricane] = 0\n",
+    "    else:\n",
+    "        hurricanes_damage[hurricane] = dmg    \n",
+    "\n",
+    "#2nd I create a function that looks for the max damage in the previous dictionary and prints the name and dmg record of the greatest hurricane\n",
+    "def greatest_damage(hurricanes_dmg):  \n",
+    "    max_dmg = max(hurricanes_dmg.values())\n",
+    "    for hurricane, damage in hurricanes_dmg.items():\n",
+    "        if damage == max_dmg:\n",
+    "            print(f\"{hurricane}: {int(damage)}\")\n",
+    "\n",
+    "greatest_damage(hurricanes_damage)\n",
+    "\n",
+    "#ALTERNATIVE without creating a new dict:\n",
+    "def grt_dmg(hurricanes):\n",
+    "    max_dmg_cane = \"\"\n",
+    "    max_damg = 0\n",
+    "    for hurricane in hurricanes:\n",
+    "        if hurricanes[hurricane][\"Damage\"] == \"Damages not recorded\":\n",
+    "            #LOOK FOR ALTERNATIVE TO \"DO NOTHING\" IF THIS IS TRUE\n",
+    "            max_dmg_cane = max_dmg_cane\n",
+    "            max_damg = max_damg\n",
+    "        elif hurricanes[hurricane][\"Damage\"] > max_damg:\n",
+    "            max_damg = hurricanes[hurricane][\"Damage\"]\n",
+    "            max_dmg_cane = hurricane\n",
+    "    return print(f\"{max_dmg_cane}: {int(max_damg)}\")\n",
+    "\n",
+    "grt_dmg(hurricanes)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{0: [], 1: [], 2: [], 3: [], 4: [], 5: []}\n{0: ['Cuba I', 'Bahamas', 'Labor Day', 'Anita'], 1: ['San Felipe II Okeechobee', 'Cuba II', 'CubaBrownsville', 'Tampico', 'Carol', 'Janet', 'Hattie', 'Edith'], 2: ['New England', 'Carla', 'Beulah', 'Felix'], 3: ['Camille', 'David', 'Allen', 'Gilbert', 'Hugo', 'Mitch', 'Isabel', 'Emily', 'Dean'], 4: ['Andrew', 'Ivan', 'Rita', 'Wilma', 'Matthew', 'Michael'], 5: ['Katrina', 'Irma', 'Maria']}\n\nHurricanes class 3: Camille, David, Allen, Gilbert, Hugo, Mitch, Isabel, Emily, Dean\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# write your catgeorize by damage function here:\n",
+    "damage_scale = {0: 0,\n",
+    "                1: 100000000,\n",
+    "                2: 1000000000,\n",
+    "                3: 10000000000,\n",
+    "                4: 50000000000}\n",
     "\n",
+    "# 1st I create a dictionary with an empty list for every value in the damage scale: \n",
+    "hurricanes_by_damage = defaultdict(list)\n",
     "\n",
+    "for key in range(len(damage_scale)+1):\n",
+    "    hurricanes_by_damage[key] = []\n",
     "\n",
-    "\n"
+    "# Printing dictionary with empty lists:\n",
+    "print(dict(hurricanes_by_damage))\n",
+    "\n",
+    "# 2nd I create a function that takes a damage amount as parameter and returns a rank value acording to the damage scale. If \"Damages were not recorded\" a 0 damage rating is asigned\n",
+    "\n",
+    "#damage = 10 (Test variable)\n",
+    "def dmg_clasificator(damage):\n",
+    "    for value in damage_scale:\n",
+    "        lower_bound = damage_scale.get(value)\n",
+    "        upper_bound = damage_scale.get(value + 1, 10000 )\n",
+    "        rank = \"\"\n",
+    "        if type(damage) == str:\n",
+    "            rank = 0\n",
+    "            break\n",
+    "        elif damage <= 0: \n",
+    "            rank = value\n",
+    "            break\n",
+    "        elif damage > lower_bound and damage <= upper_bound:\n",
+    "            rank = value + 1\n",
+    "            break\n",
+    "        else:\n",
+    "            rank = value + 1\n",
+    "    return rank\n",
+    "\n",
+    "# Finally I create a function that iteates trough every hurricane's dmg record and appends that hurricanes name to the hurricanes_by_damage dictionary:\n",
+    "\n",
+    "def damage_rater(hurricanes):\n",
+    "    for hurricane in hurricanes:\n",
+    "        hurricane_damage = hurricanes[hurricane][\"Damage\"]\n",
+    "        rating = dmg_clasificator(hurricane_damage)\n",
+    "        hurricanes_by_damage[rating].append(hurricane)\n",
+    "\n",
+    "damage_rater(hurricanes)\n",
+    "\n",
+    "# This way if the damage scales are edited the hurricanes will be re classified without further changes on the code.\n",
+    "\n",
+    "#Printing results:\n",
+    "print(dict(hurricanes_by_damage))\n",
+    "print(f\"\"\"\n",
+    "Hurricanes class 3: {\", \".join(hurricanes_by_damage[3])}\"\"\")"
    ]
   }
  ]
