--- a/hurricane_analysis.ipynb
+++ b/hurricane_analysis.ipynb
@@ -56,11 +56,47 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['Damages not recorded', 100000000.0, 'Damages not recorded', 40000000.0, 27900000.0, 5000000.0, 'Damages not recorded', 306000000.0, 2000000.0, 65800000.0, 326000000.0, 60300000.0, 208000000.0, 1420000000.0, 25400000.0, 'Damages not recorded', 1540000000.0, 1240000000.0, 7100000000.0, 10000000000.0, 26500000000.0, 6200000000.0, 5370000000.0, 23300000000.0, 1010000000.0, 125000000000.0, 12000000000.0, 29400000000.0, 1760000000.0, 720000000.0, 15100000000.0, 64800000000.0, 91600000000.0, 25100000000.0]\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Damages not recorded',\n",
+       " 100000000.0,\n",
+       " 'Damages not recorded',\n",
+       " 40000000.0,\n",
+       " 27900000.0,\n",
+       " 5000000.0,\n",
+       " 'Damages not recorded',\n",
+       " 306000000.0,\n",
+       " 2000000.0,\n",
+       " 65800000.0,\n",
+       " 326000000.0,\n",
+       " 60300000.0,\n",
+       " 208000000.0,\n",
+       " 1420000000.0,\n",
+       " 25400000.0,\n",
+       " 'Damages not recorded',\n",
+       " 1540000000.0,\n",
+       " 1240000000.0,\n",
+       " 7100000000.0,\n",
+       " 10000000000.0,\n",
+       " 26500000000.0,\n",
+       " 6200000000.0,\n",
+       " 5370000000.0,\n",
+       " 23300000000.0,\n",
+       " 1010000000.0,\n",
+       " 125000000000.0,\n",
+       " 12000000000.0,\n",
+       " 29400000000.0,\n",
+       " 1760000000.0,\n",
+       " 720000000.0,\n",
+       " 15100000000.0,\n",
+       " 64800000000.0,\n",
+       " 91600000000.0,\n",
+       " 25100000000.0]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
     }
    ],
    "source": [
@@ -68,15 +104,17 @@
     "# write your update damages function here:\n",
     "\n",
     "updated_damages = []\n",
-    "def update_damages(data):\n",
-    "    conversion = {\"M\": 1000000, \"B\": 1000000000}\n",
-    "    for value in data:\n",
-    "        if value == \"Damages not recorded\":\n",
-    "            updated_damages.append(value)\n",
+    "def update_damages(damages):\n",
+    "    conversion = {\"M\": 1000000, \n",
+    "                  \"B\": 1000000000}\n",
+    "    for damage in damages:\n",
+    "        if damage == \"Damages not recorded\":\n",
+    "            updated_damages.append(damage)\n",
     "        else:\n",
     "            for key in conversion:   \n",
-    "                if key in value:\n",
-    "                    updated_damages.append(float(value[:-1]) * conversion[key])\n",
+    "                if key in damage:\n",
+    "                    updated_damages.append(float(damage[:-1]) * conversion[key])\n",
+    "    return updated_damages\n",
     "\n",
     "# ALTERNATIVE:\n",
     "#updated_damages = []\n",
@@ -91,8 +129,7 @@
     "#        else:\n",
     "#            updated_damages.append(value)\n",
     "\n",
-    "update_damages(damages)\n",
-    "print(updated_damages)\n"
+    "update_damages(damages)\n"
    ]
   },
   {
@@ -116,7 +153,7 @@
     "# Iterating trough the entire \"names\" list length, the function imputs the data for every index in the lists in a \"hurricanes\" dictionary\n",
     "\n",
     "hurricanes = {}\n",
-    "def construct_dictionary(names, months, years, max_sustained_winds, areas_affected, damages, deaths):\n",
+    "def construct_dictionary(names, months, years, max_sustained_winds, areas_affected, updated_damages, deaths):\n",
     "    for i in range(len(names)):\n",
     "        hurricanes[names[i]] = {\"Name\": names[i], \n",
     "        \"Month\": months[i], \n",
@@ -127,7 +164,8 @@
     "        \"Deaths\": deaths[i]}\n",
     "    return hurricanes\n",
     "\n",
-    "construct_dictionary(names, months, years, max_sustained_winds, areas_affected, damages, deaths)\n",
+    "construct_dictionary(names, months, years, max_sustained_winds, areas_affected, updated_damages, deaths)\n",
+    "\n",
     "print(hurricanes[\"Cuba I\"])\n",
     "print(hurricanes[\"Michael\"])\n"
    ]
@@ -151,9 +189,9 @@
     "\n",
     "hurricanes_by_year = {}\n",
     "def organize_hurricanes_by_year(hurricanes):\n",
-    "    for key in hurricanes.keys():\n",
-    "        current_year = hurricanes[key][\"Year\"]\n",
-    "        current_cane = hurricanes[key]\n",
+    "    for hurricane in hurricanes:\n",
+    "        current_year = hurricanes[hurricane][\"Year\"]\n",
+    "        current_cane = hurricanes[hurricane]\n",
     "        if current_year in hurricanes_by_year.keys():\n",
     "            hurricanes_by_year[current_year].append(current_cane)\n",
     "        else:\n",
@@ -183,11 +221,60 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'Central America': 9, 'Mexico': 7, 'Cuba': 6, 'Florida': 6, 'The Bahamas': 7, 'Lesser Antilles': 4, 'United States East Coast': 3, 'Atlantic Canada': 3, 'Northeastern United States': 2, 'Jamaica': 4, 'Cayman Islands': 1, 'Bermuda': 2, 'Texas': 4, 'Tamaulipas': 1, 'Yucatn Peninsula': 3, 'Georgia': 1, 'The Carolinas': 1, 'Virginia': 1, 'Southeastern United States': 1, 'Southwestern Quebec': 1, 'New England': 1, 'Louisiana': 1, 'Midwestern United States': 1, 'The Caribbean': 8, 'United States Gulf Coast': 6, 'United States East coast': 1, 'South Texas': 1, 'Venezuela': 3, 'Hispaniola': 1, 'South Florida': 1, 'Greater Antilles': 2, 'Bahamas': 2, 'Eastern United States': 1, 'Ontario': 1, 'Windward Islands': 1, 'Nicaragua': 1, 'Honduras': 1, 'Antilles': 1, 'Colombia': 1, 'Cape Verde': 1, 'British Virgin Islands': 1, 'U.S. Virgin Islands': 1, 'Virgin Islands': 1, 'Puerto Rico': 1, 'Dominican Republic': 1, 'Turks and Caicos Islands': 1, 'United States Gulf Coast (especially Florida Panhandle)': 1}\n\n{'Central America': 9, 'Mexico': 7, 'Cuba': 6, 'Florida': 6, 'The Bahamas': 7, 'Lesser Antilles': 4, 'United States East Coast': 3, 'Atlantic Canada': 3, 'Northeastern United States': 2, 'Jamaica': 4, 'Cayman Islands': 1, 'Bermuda': 2, 'Texas': 4, 'Tamaulipas': 1, 'Yucatn Peninsula': 3, 'Georgia': 1, 'The Carolinas': 1, 'Virginia': 1, 'Southeastern United States': 1, 'Southwestern Quebec': 1, 'New England': 1, 'Louisiana': 1, 'Midwestern United States': 1, 'The Caribbean': 8, 'United States Gulf Coast': 6, 'United States East coast': 1, 'South Texas': 1, 'Venezuela': 3, 'Hispaniola': 1, 'South Florida': 1, 'Greater Antilles': 2, 'Bahamas': 2, 'Eastern United States': 1, 'Ontario': 1, 'Windward Islands': 1, 'Nicaragua': 1, 'Honduras': 1, 'Antilles': 1, 'Colombia': 1, 'Cape Verde': 1, 'British Virgin Islands': 1, 'U.S. Virgin Islands': 1, 'Virgin Islands': 1, 'Puerto Rico': 1, 'Dominican Republic': 1, 'Turks and Caicos Islands': 1, 'United States Gulf Coast (especially Florida Panhandle)': 1}\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Central America': 9,\n",
+       " 'Mexico': 7,\n",
+       " 'Cuba': 6,\n",
+       " 'Florida': 6,\n",
+       " 'The Bahamas': 7,\n",
+       " 'Lesser Antilles': 4,\n",
+       " 'United States East Coast': 3,\n",
+       " 'Atlantic Canada': 3,\n",
+       " 'Northeastern United States': 2,\n",
+       " 'Jamaica': 4,\n",
+       " 'Cayman Islands': 1,\n",
+       " 'Bermuda': 2,\n",
+       " 'Texas': 4,\n",
+       " 'Tamaulipas': 1,\n",
+       " 'Yucatn Peninsula': 3,\n",
+       " 'Georgia': 1,\n",
+       " 'The Carolinas': 1,\n",
+       " 'Virginia': 1,\n",
+       " 'Southeastern United States': 1,\n",
+       " 'Southwestern Quebec': 1,\n",
+       " 'New England': 1,\n",
+       " 'Louisiana': 1,\n",
+       " 'Midwestern United States': 1,\n",
+       " 'The Caribbean': 8,\n",
+       " 'United States Gulf Coast': 6,\n",
+       " 'United States East coast': 1,\n",
+       " 'South Texas': 1,\n",
+       " 'Venezuela': 3,\n",
+       " 'Hispaniola': 1,\n",
+       " 'South Florida': 1,\n",
+       " 'Greater Antilles': 2,\n",
+       " 'Bahamas': 2,\n",
+       " 'Eastern United States': 1,\n",
+       " 'Ontario': 1,\n",
+       " 'Windward Islands': 1,\n",
+       " 'Nicaragua': 1,\n",
+       " 'Honduras': 1,\n",
+       " 'Antilles': 1,\n",
+       " 'Colombia': 1,\n",
+       " 'Cape Verde': 1,\n",
+       " 'British Virgin Islands': 1,\n",
+       " 'U.S. Virgin Islands': 1,\n",
+       " 'Virgin Islands': 1,\n",
+       " 'Puerto Rico': 1,\n",
+       " 'Dominican Republic': 1,\n",
+       " 'Turks and Caicos Islands': 1,\n",
+       " 'United States Gulf Coast (especially Florida Panhandle)': 1}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
     }
    ],
    "source": [
@@ -199,26 +286,29 @@
     "    for hurricane in hurricanes:\n",
     "        areas = hurricanes[hurricane][\"Areas Affected\"]\n",
     "        for area in areas:\n",
-    "            if area not in hurricane_count_by_area.keys():\n",
+    "            if area not in hurricane_count_by_area:\n",
     "                hurricane_count_by_area[area] = 1\n",
     "            else:\n",
     "                hurricane_count_by_area[area] += 1\n",
+    "    return hurricane_count_by_area\n",
     "\n",
     "hurricane_counter(hurricanes)\n",
-    "print(hurricane_count_by_area)\n",
     "\n",
-    "print('')\n",
     "#Alternative using DEFAULTDICT\n",
     "\n",
-    "from collections import defaultdict\n",
+    "#from collections import defaultdict\n",
     "\n",
-    "hurricane_count = defaultdict(int)\n",
-    "for hurricane in hurricanes:\n",
-    "    areas = hurricanes[hurricane][\"Areas Affected\"]\n",
-    "    for area in areas:\n",
-    "        hurricane_count[area] += 1\n",
+    "#hurricane_count = defaultdict(int)\n",
     "\n",
-    "print(dict(hurricane_count))"
+    "#def hurricane_counter_by_area(hurricanes):\n",
+    "#    for hurricane in hurricanes:\n",
+    "#        areas = hurricanes[hurricane][\"Areas Affected\"]\n",
+    "#        for area in areas:\n",
+    "#            hurricane_count[area] += 1\n",
+    "#    return hurricane_count\n",
+    "\n",
+    "#hurricane_counter_by_area(hurricanes)\n",
+    "#print(dict(hurricane_count))"
    ]
   },
   {
@@ -243,8 +333,8 @@
     "    for area, hurricane_number in hurricane_count.items():\n",
     "        if hurricane_number == max_value:\n",
     "            print(f\"{area}: {hurricane_number}\")\n",
-    "\n",
-    "most_affected(hurricane_count)\n"
+    "            \n",
+    "most_affected(hurricane_count_by_area)\n"
    ]
   },
   {
@@ -263,18 +353,24 @@
    "source": [
     "\n",
     "# write your greatest number of deaths function here:\n",
+    "\n",
+    "# In this case I create a dictionary that goups every hurricane and it's death toll:\n",
     "hurricanes_deaths = {}\n",
+    "\n",
     "def most_deadly(hurricanes):\n",
-    "    for key in hurricanes.keys():\n",
-    "        current_cane = hurricanes[key][\"Name\"]\n",
-    "        death_count = hurricanes[key][\"Deaths\"]\n",
+    "    for hurricane in hurricanes:\n",
+    "        current_cane = hurricanes[hurricane][\"Name\"]\n",
+    "        death_count = hurricanes[hurricane][\"Deaths\"]\n",
     "        hurricanes_deaths[current_cane] = death_count\n",
+    "    # Then I search for the max value in that dictionary:\n",
     "    max_deaths = max(hurricanes_deaths.values())\n",
+    "    # Finally I print the one with the higher amount of deaths:\n",
     "    for cane, d_count in hurricanes_deaths.items():\n",
     "        if d_count == max_deaths:\n",
     "            print(f\"{cane}: {max_deaths}\")\n",
     "\n",
     "most_deadly(hurricanes)\n",
+    "\n",
     "print(hurricanes_deaths)\n"
    ]
   },
@@ -289,7 +385,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{0: [], 1: [], 2: [], 3: [], 4: [], 5: []}\n{0: [], 1: ['Cuba I', 'Bahamas', 'Carol', 'Carla', 'Edith', 'Anita', 'Andrew', 'Isabel', 'Emily', 'Wilma', 'Dean', 'Michael'], 2: ['CubaBrownsville', 'Tampico', 'Labor Day', 'Hattie', 'Camille', 'Allen', 'Gilbert', 'Hugo', 'Ivan', 'Rita', 'Felix', 'Irma'], 3: ['New England', 'Beulah', 'Matthew'], 4: ['San Felipe II Okeechobee', 'Cuba II', 'Janet', 'David', 'Katrina', 'Maria'], 5: ['Mitch']}\n['New England', 'Beulah', 'Matthew']\n"
+      "{0: [], 1: [], 2: [], 3: [], 4: [], 5: []}\n{0: [], 1: ['Cuba I', 'Bahamas', 'Carol', 'Carla', 'Edith', 'Anita', 'Andrew', 'Isabel', 'Emily', 'Wilma', 'Dean', 'Michael'], 2: ['CubaBrownsville', 'Tampico', 'Labor Day', 'Hattie', 'Camille', 'Allen', 'Gilbert', 'Hugo', 'Ivan', 'Rita', 'Felix', 'Irma'], 3: ['New England', 'Beulah', 'Matthew'], 4: ['San Felipe II Okeechobee', 'Cuba II', 'Janet', 'David', 'Katrina', 'Maria'], 5: ['Mitch']}\n['Mitch']\n"
      ]
     }
    ],
@@ -338,6 +434,7 @@
     "        hurricane_deads = hurricanes[hurricane][\"Deaths\"]\n",
     "        rating = clasificator(hurricane_deads)\n",
     "        hurricanes_by_mortality[rating].append(hurricane)\n",
+    "    return hurricanes_by_mortality\n",
     "\n",
     "mortality_rater(hurricanes)\n",
     "\n",
@@ -345,7 +442,7 @@
     "\n",
     "#PRINTING RESULTS:\n",
     "print(dict(hurricanes_by_mortality))\n",
-    "print(hurricanes_by_mortality[3])"
+    "print(hurricanes_by_mortality[5])"
    ]
   },
   {
@@ -390,9 +487,10 @@
     "    max_damg = 0\n",
     "    for hurricane in hurricanes:\n",
     "        if hurricanes[hurricane][\"Damage\"] == \"Damages not recorded\":\n",
-    "            #LOOK FOR ALTERNATIVE TO \"DO NOTHING\" IF THIS IS TRUE\n",
-    "            max_dmg_cane = max_dmg_cane\n",
-    "            max_damg = max_damg\n",
+    "            #LOOK FOR ALTERNATIVE TO \"DO NOTHING\" IF THIS IS TRUE:\n",
+    "            pass\n",
+    "            #max_dmg_cane = max_dmg_cane\n",
+    "            #max_damg = max_damg\n",
     "        elif hurricanes[hurricane][\"Damage\"] > max_damg:\n",
     "            max_damg = hurricanes[hurricane][\"Damage\"]\n",
     "            max_dmg_cane = hurricane\n",
@@ -410,7 +508,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{0: [], 1: [], 2: [], 3: [], 4: [], 5: []}\n{0: ['Cuba I', 'Bahamas', 'Labor Day', 'Anita'], 1: ['San Felipe II Okeechobee', 'Cuba II', 'CubaBrownsville', 'Tampico', 'Carol', 'Janet', 'Hattie', 'Edith'], 2: ['New England', 'Carla', 'Beulah', 'Felix'], 3: ['Camille', 'David', 'Allen', 'Gilbert', 'Hugo', 'Mitch', 'Isabel', 'Emily', 'Dean'], 4: ['Andrew', 'Ivan', 'Rita', 'Wilma', 'Matthew', 'Michael'], 5: ['Katrina', 'Irma', 'Maria']}\n\nHurricanes class 3: Camille, David, Allen, Gilbert, Hugo, Mitch, Isabel, Emily, Dean\n"
+      "{0: [], 1: [], 2: [], 3: [], 4: [], 5: []}\n{0: ['Cuba I', 'Bahamas', 'Labor Day', 'Anita'], 1: ['San Felipe II Okeechobee', 'Cuba II', 'CubaBrownsville', 'Tampico', 'Carol', 'Janet', 'Hattie', 'Edith'], 2: ['New England', 'Carla', 'Beulah', 'Felix'], 3: ['Camille', 'David', 'Allen', 'Gilbert', 'Hugo', 'Mitch', 'Isabel', 'Emily', 'Dean'], 4: ['Andrew', 'Ivan', 'Rita', 'Wilma', 'Matthew', 'Michael'], 5: ['Katrina', 'Irma', 'Maria']}\n\nHurricanes class 1: San Felipe II Okeechobee, Cuba II, CubaBrownsville, Tampico, Carol, Janet, Hattie, Edith\nHurricanes class 2: New England, Carla, Beulah, Felix\nHurricanes class 3: Camille, David, Allen, Gilbert, Hugo, Mitch, Isabel, Emily, Dean\nHurricanes class 4: Andrew, Ivan, Rita, Wilma, Matthew, Michael\nHurricanes class 5: Katrina, Irma, Maria\n\n"
      ]
     }
    ],
@@ -468,7 +566,12 @@
     "#Printing results:\n",
     "print(dict(hurricanes_by_damage))\n",
     "print(f\"\"\"\n",
-    "Hurricanes class 3: {\", \".join(hurricanes_by_damage[3])}\"\"\")"
+    "Hurricanes class 1: {\", \".join(hurricanes_by_damage[1])}\n",
+    "Hurricanes class 2: {\", \".join(hurricanes_by_damage[2])}\n",
+    "Hurricanes class 3: {\", \".join(hurricanes_by_damage[3])}\n",
+    "Hurricanes class 4: {\", \".join(hurricanes_by_damage[4])}\n",
+    "Hurricanes class 5: {\", \".join(hurricanes_by_damage[5])}\n",
+    "\"\"\")"
    ]
   }
  ]
